<resources>
    <string name="app_name">ghouls</string>
    <string name="shuffle_button">Shuffle</string>
    <string name="favourite_button">Favourites</string>
    <string name="playlist_button">Playlist</string>
    <string name="total_songs_button">Total Songs</string>
    <string name="touka_music">Ghoul Songs</string>
    <string name="song_name"> Song Name</string>
    <string name="back_button">Back </string>
    <string name="start_fm">00:00</string>
    <string name="end_fm">Loading</string>
    <string name="repeat_button">repeat</string>
    <string name="equalizer_button">Equalizer</string>
    <string name="Timer_button">Timer</string>
    <string name="share_Button1">Share</string>
    <string name="open_va">open</string>
    <string name="close_va">close</string>
    <string name="app_iconname">icon</string>
    <string name="nav_iconMessege">Welcome\nGroove in Music</string>
    <string name="nav_feedback">Feedback</string>
    <string name="nacv_settings">Settings</string>
    <string name="nav_about">About</string>
    <string name="nav_exitbut">Exit</string>
    <string name="song_album">Album</string>
    <string name="min_30">30 Minutes</string>
    <string name="min_60">1 hour</string>
    <string name="min_180">3 hour</string>
    <string name="SearchView">Search</string>
    <string name="song_image">Song Image</string>
    <string name="playlist_name">Playlist Name</string>
    <string name="playlist_del">delete</string>
    <string name="yourname">Your Name</string>
    <string name="user_name">Your Name</string>
    <string name="add_song">Add Songs</string>
    <string name="remove_all">Remove All</string>
</resources>