<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayerActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/black"
    android:backgroundTint="@color/black"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_weight="1"
        tools:ignore="InefficientWeight">



        <ImageButton
            android:id="@+id/backButtonPA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_arrow_back_ios_new_24"
            android:layout_margin="10dp"
            android:background="@color/black"
            android:contentDescription="@string/back_button">
        </ImageButton>
        <TextView
            android:id="@+id/appnamePA"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/touka_music"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="35sp"
            android:gravity="center"
            android:layout_weight="1"
            >

        </TextView>
        <ImageButton
            android:id="@+id/favouritebuttonPA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_favorite_24"
            android:layout_margin="10dp"
            android:background="@color/black"
            >

        </ImageButton>


    </LinearLayout>
<!--    current playing  song image-->
    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/songsImage"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_margin="10dp"
        android:src="@mipmap/touka_round"
        app:shapeAppearanceOverlay="@style/curved"
        app:strokeColor="#F40202"
        app:strokeWidth="5dp"
        >

    </com.google.android.material.imageview.ShapeableImageView>

      <TextView
          android:id="@+id/currentSongname"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginHorizontal="20dp"
          android:text="@string/song_name"
          android:textSize="25sp"
          android:textColor="#EA0C4F"
          android:textAlignment="center"
          android:layout_weight="1"
          android:gravity="center">

      </TextView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:gravity="center">
       <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
           android:id="@+id/previousPlay"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           app:icon="@drawable/ic_baseline_arrow_circle_left_24"
           app:iconSize="35dp"
           android:backgroundTint="@android:color/holo_red_dark"

           >

       </com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton>
        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/playpausebutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_baseline_pause_circle_filled_24"
            app:iconSize="45dp"
            android:layout_marginHorizontal="25dp"
            app:shapeAppearanceOverlay="@style/curved"
            android:backgroundTint="@android:color/holo_blue_bright"
            >

        </com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton>
        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/nextplaybutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_baseline_arrow_circle_right_24"
            app:iconSize="35dp"
            android:backgroundTint="@android:color/holo_red_dark"
            >

        </com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal"
        android:layout_margin="20dp">
        <TextView
            android:id="@+id/prevtextseek"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:text="@string/start_fm"
            android:gravity="center">

        </TextView>
        <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/appseekbar"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:thumbTint="#FF0505"
            >

        </androidx.appcompat.widget.AppCompatSeekBar>
        <TextView
            android:id="@+id/nexttextseek"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:text="@string/end_fm"
            android:gravity="center">

        </TextView>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <ImageButton
            android:id="@+id/repeatbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_repeat_24"
            android:background="@android:color/transparent"
            android:tint="#F21558"
            android:contentDescription="@string/repeat_button"
            tools:ignore="UseAppTint"
            android:layout_weight="1"
            android:backgroundTint="@color/black"
            android:layout_marginHorizontal="20sp"
            >
        </ImageButton>
        <ImageButton
            android:id="@+id/equalizserbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_equalizer_24"
            android:layout_marginHorizontal="20sp"
            android:background="@color/white"
            android:contentDescription="@string/equalizer_button"
            android:tint="#F21558"
            tools:ignore="UseAppTint"
            android:backgroundTint="@color/black"
            android:layout_weight="1">
        </ImageButton>
        <ImageButton
            android:id="@+id/watchbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_timer_24"
            android:background="@color/white"
            android:contentDescription="@string/Timer_button"
            android:tint="#F21558"
            tools:ignore="UseAppTint"
            android:layout_weight="1"
            android:backgroundTint="@color/black"
            android:layout_marginHorizontal="20sp">
        </ImageButton>
        <ImageButton
            android:id="@+id/sharebutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_share_24"
            android:background="@color/white"
            android:contentDescription="@string/share_Button1"
            android:tint="#F21558"
            tools:ignore="UseAppTint"
            android:layout_weight="1"
            android:backgroundTint="@color/black"
            android:layout_marginHorizontal="20sp">
        </ImageButton>
    </LinearLayout>

</LinearLayout>