<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:backgroundTint="@color/black"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

<!--    for buttons -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/shuffleButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/shuffle_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:drawableTop="@drawable/ic_baseline_shuffle_24"
            android:text="@string/shuffle_button"
            android:textColor="#EA0C4F"
            >

        </Button>
        <Button
            android:id="@+id/favouriteButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/favourite_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:drawableTop="@drawable/ic_baseline_favorite_24"
            android:text="@string/favourite_button"
            android:textColor="#EA0C4F"
           >

        </Button>
        <Button
            android:id="@+id/playlistButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/playlist_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:drawableTop="@drawable/ic_baseline_playlist_play_24"
            android:text="@string/playlist_button"
            android:textColor="#EA0C4F">

        </Button>


    </LinearLayout>
    <TextView
        android:id="@+id/totalsongs_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/total_songs_button"
        android:textColor="#EA0C4F"
        android:layout_margin="10dp"
        android:textAlignment="center">
    </TextView>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/music_recycle_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </androidx.recyclerview.widget.RecyclerView>
</LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_View"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/navigationheader"
        app:menu="@menu/navigation_menu"
        >

    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>