<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="65dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="5dp"
    android:padding="2dp">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageview"
        android:layout_width="60dp"
        android:layout_height="55dp"
        android:src="@drawable/music_screen_icon"
        app:shapeAppearanceOverlay="@style/curved"
        android:layout_marginStart="5dp"
        android:layout_marginVertical="5dp"
        >

    </com.google.android.material.imageview.ShapeableImageView>


<!--    songe names-->
    <TextView
        android:id="@+id/song_name"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="@string/song_name"
        android:textColor="#DD0C12"
        android:gravity="center_vertical"
        android:singleLine="true"
        android:layout_toEndOf="@id/imageview"
        android:layout_toStartOf="@+id/song_duration"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="50dp"
        >

    </TextView>


<!--    songs name, album part 2-->


    <!--    songs duration-->

    <TextView
        android:id="@+id/song_album"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_toStartOf="@+id/song_duration"
        android:layout_marginTop="30dp"
        android:layout_toEndOf="@id/imageview"
        android:text="@string/song_album"
        android:textColor="#0CC8DD"
        android:gravity="center_vertical"
        android:singleLine="true"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="50dp"
        android:textAlignment="center"
        tools:ignore="RtlCompat"
        android:textStyle="italic">

    </TextView>

    <TextView
        android:id="@+id/song_duration"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="@string/start_fm"
        android:gravity="center"
        android:textColor="#DD0C12"
        android:layout_alignParentEnd="true"
        android:layout_marginHorizontal="5dp">

    </TextView>

</RelativeLayout>